# project_name

./: .envrc  .gitignore  404.html  README.md  index.html  lefthook.yaml  pixi.toml  pyproject.toml  sitemap.xml  tbump.toml
.github/workflows/: release.yml  test.yml
about/citation/: index.html
docs/source/: conf.py  index.md
installation/: index.html
quickstart/: index.html
reference/api/: index.html
scripts/: init.sh  setup.sh
search/: search_index.json
src/project_name/: __init__.py
tests/: test_project_name.py
tutorials/tutorial1/: index.html
tutorials/tutorial2/: index.html
